good amount of styling done, comment styling and avatar pending

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/robot.ico">
 
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    
+
     <title>Sample App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class='container'>
+      <div class='blogpost'>
+        <h1 class='text-center'>Lorem Ipsumius</h1>
+        <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nisi nisl,
+        fringilla ut venenatis eu, volutpat lacinia turpis. Phasellus arcu quam,
+        suscipit sit amet finibus vel, tempus sed ex. Ut mattis lorem sed sodales
+        condimentum. Donec facilisis nec purus et feugiat. Vestibulum ante ipsum
+        primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vivamus
+        nec ante eu nisl eleifend luctus. Cras et arcu iaculis, pretium metus vel,
+        interdum elit. Pellentesque sapien metus, dictum sed finibus non, rutrum ut neque.
+        Vivamus ultrices, nunc a suscipit tempus, mi urna laoreet arcu, sit amet vehicula arcu ante a sem.
+        </p>
+        <p>
+        Phasellus faucibus risus placerat metus malesuada, id pulvinar tellus auctor.
+        Morbi sit amet pellentesque quam, non imperdiet mi. Nulla ultricies malesuada
+        urna at euismod. Quisque rutrum ex est, at tincidunt tortor imperdiet a. Nam
+        sed dui at arcu facilisis mattis non at est. Nam imperdiet ornare odio nec
+        fermentum. Curabitur rhoncus nisi nisi, ut sollicitudin lacus cursus eu.
+        Maecenas leo justo, varius non enim in, facilisis ultrices lectus. Sed
+        cursus molestie varius. Nullam egestas elit accumsan pretium venenatis.
+        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
+        cubilia Curae; Donec tincidunt posuere mauris, nec condimentum lorem scelerisque ac.
+        </p>
+        <p>
+        Suspendisse sagittis eleifend ante, at ornare urna maximus vel. Sed vulputate
+        tellus ac quam efficitur pulvinar in non nunc. Nam eu lorem vel ligula tincidunt
+        interdum sit amet vitae diam. Quisque pellentesque venenatis nibh et scelerisque.
+        Sed id vehicula lectus. Nunc lacinia lacus nec nisl auctor tempus. Phasellus id
+        neque sagittis, eleifend est venenatis, mollis metus. Vestibulum a libero eros.
+        Quisque tortor neque, dapibus at mi a, volutpat facilisis ex. In hac habitasse
+        platea dictumst.
+        </p>
+
+      </div>
+      <div id='react-comment'></div>
+    </div>
+
   </body>
 </html>
