--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
   <body>
     <div class='container'>
       <div class='blogpost'>
-        <h1 class='text-center'>Lorem Ipsumius</h1>
-        <p>
+        <h1 class='title text-center'>Lorem Ipsumius</h1>
+        <p class='paragraph'>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nisi nisl,
         fringilla ut venenatis eu, volutpat lacinia turpis. Phasellus arcu quam,
         suscipit sit amet finibus vel, tempus sed ex. Ut mattis lorem sed sodales
@@ -26,7 +26,7 @@
         interdum elit. Pellentesque sapien metus, dictum sed finibus non, rutrum ut neque.
         Vivamus ultrices, nunc a suscipit tempus, mi urna laoreet arcu, sit amet vehicula arcu ante a sem.
         </p>
-        <p>
+        <p class='paragraph'>
         Phasellus faucibus risus placerat metus malesuada, id pulvinar tellus auctor.
         Morbi sit amet pellentesque quam, non imperdiet mi. Nulla ultricies malesuada
         urna at euismod. Quisque rutrum ex est, at tincidunt tortor imperdiet a. Nam
@@ -37,7 +37,7 @@
         Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
         cubilia Curae; Donec tincidunt posuere mauris, nec condimentum lorem scelerisque ac.
         </p>
-        <p>
+        <p class='paragraph'>
         Suspendisse sagittis eleifend ante, at ornare urna maximus vel. Sed vulputate
         tellus ac quam efficitur pulvinar in non nunc. Nam eu lorem vel ligula tincidunt
         interdum sit amet vitae diam. Quisque pellentesque venenatis nibh et scelerisque.
